// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxGroup renders checked CheckBox without CheckBoxGroup 1`] = `
Object {
  "container": <div>
    <label
      class="checkbox--small checkbox__checked sc-gzVnrw jLPzax"
    >
      <input
        class="sc-bZQynM fYtyTz"
        data-testid="test-checkbox"
        id="something1input"
        name="something"
        type="checkbox"
        value="1"
      />
      <div
        class="sc-dnqmqq jurKOe"
      >
        <svg
          class="sc-iwsKbI eyASts"
          fill="none"
          fill-rule="evenodd"
          height="16"
          stroke="currentcolor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="3"
          viewBox="0 0 24 28"
          width="16"
        >
          <path
            d="M5.215 12.219l4.437 4.439 9.514-9.433"
          />
        </svg>
      </div>
      <span
        aria-checked="true"
        aria-labelledby="something1"
        class="sc-htoDjs dloQcR"
        role="checkbox"
      />
    </label>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckBoxGroup renders default CheckBox without CheckBoxGroup 1`] = `
Object {
  "container": <div>
    <label
      class="checkbox--small sc-gzVnrw jLPzax"
    >
      <input
        class="sc-bZQynM fYtyTz"
        data-testid="test-checkbox"
        id="something1input"
        name="something"
        type="checkbox"
        value="1"
      />
      <div
        class="sc-dnqmqq jurKOe"
      >
        <svg
          class="sc-iwsKbI eyASts"
          fill="none"
          fill-rule="evenodd"
          height="16"
          stroke="currentcolor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="3"
          viewBox="0 0 24 28"
          width="16"
        >
          <path
            d="M5.215 12.219l4.437 4.439 9.514-9.433"
          />
        </svg>
      </div>
      <span
        aria-checked="false"
        aria-labelledby="something1"
        class="sc-htoDjs dloQcR"
        role="checkbox"
      />
    </label>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckBoxGroup renders default input 1`] = `
Object {
  "container": <div>
    <div
      role="checkbox"
    >
      <label
        class="checkbox--large sc-gzVnrw jLPzax"
      >
        <input
          class="sc-bZQynM fYtyTz"
          data-testid="test-checkbox"
          id="somethingelseinput"
          name="something"
          type="checkbox"
          value="else"
        />
        <div
          class="sc-dnqmqq jurKOe"
        >
          <svg
            class="sc-iwsKbI eyASts"
            fill="none"
            fill-rule="evenodd"
            height="24"
            stroke="currentcolor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            viewBox="0 0 24 28"
            width="24"
          >
            <path
              d="M5.215 12.219l4.437 4.439 9.514-9.433"
            />
          </svg>
        </div>
        <span
          aria-checked="false"
          aria-labelledby="somethingelse"
          class="sc-htoDjs dloQcR"
          role="checkbox"
        />
      </label>
    </div>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckBoxGroup renders large input 1`] = `
Object {
  "container": <div>
    <div
      role="checkbox"
    >
      <label
        class="checkbox--large sc-gzVnrw jLPzax"
      >
        <input
          class="sc-bZQynM fYtyTz"
          data-testid="test-checkbox"
          id="somethingelseinput"
          name="something"
          type="checkbox"
          value="else"
        />
        <div
          class="sc-dnqmqq jurKOe"
        >
          <svg
            class="sc-iwsKbI eyASts"
            fill="none"
            fill-rule="evenodd"
            height="24"
            stroke="currentcolor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            viewBox="0 0 24 28"
            width="24"
          >
            <path
              d="M5.215 12.219l4.437 4.439 9.514-9.433"
            />
          </svg>
        </div>
        <span
          aria-checked="false"
          aria-labelledby="somethingelse"
          class="sc-htoDjs dloQcR"
          role="checkbox"
        />
      </label>
    </div>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckBoxGroup renders small input 1`] = `
Object {
  "container": <div>
    <div
      role="checkbox"
    >
      <label
        class="checkbox--large sc-gzVnrw jLPzax"
      >
        <input
          class="sc-bZQynM fYtyTz"
          data-testid="test-checkbox"
          id="somethingelseinput"
          name="something"
          type="checkbox"
          value="else"
        />
        <div
          class="sc-dnqmqq jurKOe"
        >
          <svg
            class="sc-iwsKbI eyASts"
            fill="none"
            fill-rule="evenodd"
            height="24"
            stroke="currentcolor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="3"
            viewBox="0 0 24 28"
            width="24"
          >
            <path
              d="M5.215 12.219l4.437 4.439 9.514-9.433"
            />
          </svg>
        </div>
        <span
          aria-checked="false"
          aria-labelledby="somethingelse"
          class="sc-htoDjs dloQcR"
          role="checkbox"
        />
      </label>
    </div>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
